[FEAT] Implement recyclerView #5
- 홈 fragment에 쓰이는 recyclerView 구현 완료 (Dto, Service, Adapter) 
- xml은 러프하게 작업해서 좀 더 다듬어야 함

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="setting">관리</string>
     <string name="mini_player_example_title">2</string>
     <string name="mini_player_subtitle_example">파친코1</string>
+    <string name="bookimage">bookImage</string>
+    <string name="s_pick">윌라\'s PICK</string>
+    <string name="n_n">자비로운 신은\n왜 인간에게\n고통을 주는가?</string>
+    <string name="n">신과 인간에 대한 고뇌와 탐구\n이문열 인생 역작을 듣다</string>
+    <string name="dddd">제 남편은 결코 사람을 죽이지 않았어요</string>
+    <string name="k">K-스릴러 붉은 열대어</string>
+    <string name="sss">듣고 있던 오디오북! 계속 들어볼까요?</string>
 </resources>
